--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -2,7 +2,9 @@
   <%= link_to t('exports.custom_exports.label'), '#', data: {"reveal-id" => 'custom-exports'} %>
   <div id="custom-exports" class="reveal-modal large"
       data-reveal data-record-type="<%= controller.model_class == Child ? 'case' : controller.model_class.to_s.underscore %>"
-      data-module-id="<%= @record.module_id if @record.present? %>">
+      data-module-id="<%= @record.module_id if @record.present? %>"
+      data-record-id="<%= @record.id if @record.present? %>"
+      data-model-class="<%= controller.model_class %>">
     <h4><%= t('exports.custom_exports.label') %></h4>
     <form id="custom_export_form">
       <div class="row">
@@ -51,14 +53,14 @@
             <div class="flash hide">
               <p class="error"></p>
             </div>
-            <label for="password-prompt-field"><%= t('encrypt.password_label') %></label>
-            <input type="password" id="password-prompt-field">
+            <label for="password-field"><%= t('encrypt.password_label') %></label>
+            <input type="password" id="password-field">
             <small><%= t('encrypt.password_extra_info') %></small>
-            <label id="export-file-name-label" for="export-file-name-field"><%= t('encrypt.file_name') %></label>
-            <input type="text" id="export-file-name-field">
+            <label for="export-filename"><%= t('encrypt.file_name') %></label>
+            <input type="text" id="export-filename">
 
             <fieldset class="no-border">
-              <button class="btn green-button right"><%= t('exports.custom_export.export_submit') %></button>
+              <button id="submit_export" class="btn green-button right"><%= t('exports.custom_export.export_submit') %></button>
             </fieldset>
           </div>
         </div>
