--- a/app/views/potential_matches/_filter.html.erb
+++ b/app/views/potential_matches/_filter.html.erb
@@ -1,7 +1,11 @@
 <div class="panel">
   <form id="index_filter_form" autocomplete="off">
-    <% if filters_to_show.include? 'Status' %>
-        <%= build_filter_checkboxes(t("potential_matches.filter_by.status"), 'status', [{'true' => 'Potential'}, {'false' => 'Deleted'}]) %>
+    <% if filters_to_show.include? 'Score' %>
+        <%= build_filter_checkboxes(t("potential_matches.filter_by.score"), 'average_rating', [
+            '0-5',
+            '6-11',
+            '12-17'
+        ], nil, nil, 'range') %>
     <% end %>
   </form>
   <div class="clearfix"></div>
