--- a/app/views/potential_matches/_filter.html.erb
+++ b/app/views/potential_matches/_filter.html.erb
@@ -1,10 +1,22 @@
 <div class="panel">
   <form id="index_filter_form" autocomplete="off">
-    <% if filters_to_show.include? 'Score' %>
-        <%= build_filter_checkboxes(t("potential_matches.filter_by.score"), 'average_rating', [
+    <% if filters_to_show.include? 'Age Range' %>
+        <%= build_filter_checkboxes(t("potential_matches.filter_by.age_range"), 'tr_age', [
             '0-5',
             '6-11',
-            '12-17'
+            '12-17',
+            '18+'
+        ], nil, nil, 'range') %>
+    <% end %>
+    <% if filters_to_show.include? 'Sex' %>
+        <%= build_filter_checkboxes(t("potential_matches.filter_by.sex"), 'tr_gender', [t("cases.filter_by.male"), t("cases.filter_by.female")]) %>
+    <% end %>
+    <% if filters_to_show.include? 'Score Range' %>
+        <%= build_filter_checkboxes(t("potential_matches.filter_by.score_range"), 'average_rating', [
+            '0-4',
+            '4-8',
+            '8-12',
+            '12+'
         ], nil, nil, 'range') %>
     <% end %>
   </form>
