--- a/app/views/potential_matches/_filter.html.erb
+++ b/app/views/potential_matches/_filter.html.erb
@@ -9,7 +9,7 @@
         ], nil, nil, 'range') %>
     <% end %>
     <% if filters_to_show.include? 'Sex' %>
-        <%= build_filter_checkboxes(t("potential_matches.filter_by.sex"), 'tr_gender', [t("cases.filter_by.male"), t("cases.filter_by.female")]) %>
+        <%= build_filter_checkboxes(t("potential_matches.filter_by.sex"), 'tr_gender', [t("potential_matches.filter_by.male"), t("potential_matches.filter_by.female")]) %>
     <% end %>
     <% if filters_to_show.include? 'Score Range' %>
         <%= build_filter_checkboxes(t("potential_matches.filter_by.score_range"), 'average_rating', [
