--- a/app/views/record_shared/_list_view_div.html.erb
+++ b/app/views/record_shared/_list_view_div.html.erb
@@ -8,10 +8,14 @@
       display_actions: model.to_s =="PotentialMatch" ? false : true,
       display_create: display_create}.merge(opts)
 %>
+
 <div class="index_controls_container" data-top="50" data-bottom="40">
   <div class="row collapse">
     <div class="large-9 small-9 columns">
       <div class="row collapse">
+        <div class="large-6 small-6 columns">
+          <div class="pagination_info"><%= page_entries_info collection %></div>
+        </div>
         <div class="large-6 small-6 columns">
           <%= render partial: "record_shared/header",
                      locals: {
@@ -35,11 +39,15 @@
   </div>
 </div>
 <div class="row collapse">
-  <div class="large-9 small-9 columns">
+  <div class="large-9 small-9 columns" style="padding-top: 14px;">
     <div class="clearfix"></div>
     <%= render :partial => "#{controller.controller_name}/summary_row", collection: collection, as: :record %>
+
+    <table style="width: 100%;" class="record_list_view dataTable paging_div_view" cellpadding="0" cellspacing="0" style="display: none">
+    </table>
   </div>
   <div class="large-3 small-3 columns index_filters">
     <%= render "#{controller.controller_name}/filter", filters_to_show: index_filters_to_show(record) %>
   </div>
 </div>
+<%= render :partial => 'shared/pagination', :locals => {:results => collection, :total => @total_records, :per => @per_page} %>
