--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -1,7 +1,4 @@
 <%
-  doc_type = ((field.name.split('_').last == 'material') ? 'material' : 'document')
-
-
   # By having certain things derived from field name and form name
   # it'll be much easier now to load different types of document forms (BIA, BID, Other)
   upload_document = field.name
@@ -13,6 +10,7 @@
 
   date_validator = field.date_validation == 'not_future_date' ? "primeroDateNotInFuture" : "primeroDate"
   error_msg = field.date_validation == 'not_future_date' ? "fields.future_date_not_valid" : "fields.date_not_valid"
+  doc_type = field.upload_document_type || 'document'
 %>
 <div class="row">
   <p>
@@ -110,7 +108,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">I18n.t("fields.file_upload_box.#{doc_type}.current_document_label")</label>
+          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.current_document_label")%></label>
         </div>
         <div class="medium-8 columns">
           <%= check_box_tag "#{record_class_name}[#{upload_document}][0][is_current]", true, false, :id => is_current_upload_id, :tag => "is_current" %>
@@ -118,7 +116,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">I18n.t("fields.file_upload_box.#{doc_type}.document_name_label")</label>
+          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.document_name_label")%></label>
         </div>
         <div class="medium-8 columns">
           <%= text_field_tag "#{record_class_name}[#{upload_document}][0][document_description]", "", :id => description_upload_id, :tag => "description" %>
@@ -126,7 +124,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">I18n.t("fields.file_upload_box.#{doc_type}.document_date_label")</label>
+          <label class="key"><%= I18n.t("fields.file_upload_box.#{doc_type}.document_date_label")%></label>
         </div>
         <div class="medium-8 columns">
           <%= text_field_tag "#{record_class_name}[#{upload_document}][0][date]", "", :tag => "date", :class => 'form_date_field has_help', :id => date_upload_id, "data-abide-validator" => date_validator %>
@@ -136,7 +134,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">I18n.t("fields.file_upload_box.#{doc_type}.comment_label")</label>
+          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.comment_label")%></label>
         </div>
         <div class="medium-8 columns">
           <%= text_area_tag "#{record_class_name}[#{upload_document}][0][comments]", "", :id => comments_upload_id, :tag => "comments" %>
