--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -11,6 +11,7 @@
   date_validator = field.date_validation == 'not_future_date' ? "primeroDateNotInFuture" : "primeroDate"
   error_msg = field.date_validation == 'not_future_date' ? "fields.future_date_not_valid" : "fields.date_not_valid"
   doc_type = field.upload_document_type || 'document'
+  help_text = field.upload_document_help_text || {}
 %>
 <div class="row">
   <p>
@@ -41,6 +42,7 @@
         <div>
           <span class="document"><%= document["file_name"] %></span>
         </div>
+        <% if help_text['add'].present? %><p class="help"><%= help_text['add']  %></p><% end %>
       </div>
     </div>
     <div class="row">
@@ -50,6 +52,7 @@
       <div class="medium-8 columns">
         <% checked = document["is_current"].present? %>
         <%= check_box_tag "#{name}[is_current]", true, checked, :id => is_current_field_id %>
+        <% if help_text['current'].present? %><p class="help"><%= help_text['current']  %></p><% end %>
       </div>
     </div>
     <div class="row">
@@ -58,6 +61,7 @@
       </div>
       <div class="medium-8 columns">
         <%= text_field_tag "#{name}[document_description]", document_description, :id => description_field_id %>
+        <% if help_text['name'].present? %><p class="help"><%= help_text['name']  %></p><% end %>
       </div>
     </div>
     <div class="row">
@@ -68,7 +72,13 @@
         <% date_for_display = field_value_for_display document["date"] %>
         <%= text_field_tag "#{name}[date]", date_for_display, :class => 'form_date_field has_help', :id => date_field_id, "data-abide-validator" => date_validator %>
         <small class="error"><%= I18n.t(error_msg)%></small>
-        <p class="help"><%= t("fields.date_help") %></p>
+        <p class="help">
+          <% if help_text['date'].present? %>
+            <%= help_text['date']  %>
+          <% else %>
+            <%= t("fields.date_help") %>
+          <% end %>
+        </p>
       </div>
     </div>
     <div class="row">
@@ -77,6 +87,7 @@
       </div>
       <div class="medium-8 columns">
         <%= text_area_tag "#{name}[comments]", comments, :id => comments_field_id %>
+        <% if help_text['comments'].present? %><p class="help"><%= help_text['comments']  %></p><% end %>
         <div>
           <%= check_box_tag("#{name}[delete_document]", true, false, :id => delete_field_id) %>
           <%= label_tag delete_field_id, t("#{record_class_name}.actions.delete_document") %>
@@ -104,6 +115,7 @@
         </div>
         <div class="medium-8 columns file_upload">
           <%= render "form_section/file_input", name: "#{record_class_name}[#{upload_document}][0][document]", id: "#{record_class_name}_#{upload_document}_0_document", help_text: document_upload_box.help_text || ""%>
+          <% if help_text['add'].present? %><p class="help"><%= help_text['add']  %></p><% end %>
         </div>
       </div>
       <div class="row">
@@ -112,6 +124,7 @@
         </div>
         <div class="medium-8 columns">
           <%= check_box_tag "#{record_class_name}[#{upload_document}][0][is_current]", true, false, :id => is_current_upload_id, :tag => "is_current" %>
+          <% if help_text['current'].present? %><p class="help"><%= help_text['current']  %></p><% end %>
         </div>
       </div>
       <div class="row">
@@ -120,6 +133,7 @@
         </div>
         <div class="medium-8 columns">
           <%= text_field_tag "#{record_class_name}[#{upload_document}][0][document_description]", "", :id => description_upload_id, :tag => "description" %>
+          <% if help_text['name'].present? %><p class="help"><%= help_text['name']  %></p><% end %>
         </div>
       </div>
       <div class="row">
@@ -129,7 +143,13 @@
         <div class="medium-8 columns">
           <%= text_field_tag "#{record_class_name}[#{upload_document}][0][date]", "", :tag => "date", :class => 'form_date_field has_help', :id => date_upload_id, "data-abide-validator" => date_validator %>
           <small class="error"><%= I18n.t(error_msg)%></small>
-          <p class="help"><%= t("fields.date_help") %></p>
+          <p class="help">
+            <% if help_text['date'].present? %>
+              <%= help_text['date']  %>
+            <% else %>
+              <%= t("fields.date_help") %>
+            <% end %>
+          </p>
         </div>
       </div>
       <div class="row">
@@ -138,6 +158,7 @@
         </div>
         <div class="medium-8 columns">
           <%= text_area_tag "#{record_class_name}[#{upload_document}][0][comments]", "", :id => comments_upload_id, :tag => "comments" %>
+          <% if help_text['comments'].present? %><p class="help"><%= help_text['comments']  %></p><% end %>
         </div>
       </div>
     </div>
